A temporary solution to extracting CSS to a single seperate file for isomorphic rendering

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-livereload": "~3.7.0",
     "connect-livereload": "~0.5.3",
     "gulp-load-plugins": "~0.8.0",
-    "gulp-util": "~3.0.3"
+    "gulp-util": "~3.0.3",
+    "extract-text-webpack-plugin": "~0.3.8"
   }
 }
